--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.4"
+        "laravel/ui": "^3.4",
+        "spatie/browsershot": "^3.55",
+        "spatie/crawler": "^7.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
