--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-react": "^0.8.0",
-        "jsconfig.json": "^2.3.3"
+        "jsconfig.json": "^2.3.3",
+        "puppeteer": "^14.4.1"
     }
 }
