--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-react": "^0.8.0",
         "jsconfig.json": "^2.3.3",
-        "puppeteer": "^14.4.1"
+        "puppeteer": "^14.4.1",
+        "react-textarea-autosize": "^8.3.4"
     }
 }
